# whatsapp-notifier

./: .gitignore  README.md  config.py  contact_validator.py  main.py  message_handler.py  ocr_extractor.py  pyproject.toml  quick-start.bat  quick-start.sh  requirements.txt  setup.py  whatsapp_automation.py
messages/: message.txt
